Configure extension usability: * Hide massive stuff like group permissions with a collapse box. * Use more descriptive columns than 'key' and 'value', individually per-setting. * Move around some vars, including a 'popular' tab for logo, namespaces, group rights, and other stuff that's actually important. * Fix up some descriptions.
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/trunk@43871 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/extensions/Configure/Configure.css
+++ b/extensions/Configure/Configure.css
@@ -54,6 +54,10 @@ ul.configtoc > li, ul.configtoc > li > ul > li {
 	background-color: #fefefe;
 }
 
+ul.configtoc > li > a.selected {
+	background-color: #ddddff;
+}
+
 .config-toc-delimiter {
 	border-top: 1px solid #bbb;
 	width: 100%;
@@ -132,6 +136,25 @@ td.button {
 
 input.button-add {
 	float: left;
+}
+
+.configure-biglist {
+	-moz-column-count:2;
+}
+
+.configure-biglist-toggle-link {
+	display: block;
+	float: right;
+}
+
+.configure-biglist-placeholder {
+	background-color: #dda;
+	width: 100ex;
+	text-align: center;
+}
+
+table.configure-array-table {
+	min-width: 50%;
 }
 
 /**
